# multilingual-mandi-platform

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  test_minimal_translation.py  test_simple.py  test_translation_minimal.py
.github/workflows/: test.yml
.kiro/specs/multilingual-mandi-platform/: design.md  requirements.md  tasks.md
alembic/: env.py
alembic/versions/: 001_create_user_and_vendor_models.py  003_add_product_models.py
docs/: NLP_SETUP.md
src/mandi_platform/: __init__.py  cli.py  config.py  database.py  elasticsearch_client.py  main.py  redis_client.py
src/mandi_platform/api/: __init__.py  auth.py  health.py  products.py  translation_debug.py  translation_simple.py
src/mandi_platform/api/schemas/: __init__.py  product.py
src/mandi_platform/auth/: __init__.py  dependencies.py  jwt.py  middleware.py  schemas.py
src/mandi_platform/cli/: __init__.py  translation.py
src/mandi_platform/crud/: __init__.py  base.py  product.py  user.py
src/mandi_platform/models/: __init__.py  base.py  enums.py  product.py  user.py
src/mandi_platform/search/: __init__.py  product_search.py
src/mandi_platform/translation/: __init__.py  config.py  language_detector.py  models.py  service.py  setup.py
tests/: .env.test  __init__.py  conftest.py  pytest.ini  test_auth_api.py  test_auth_dependencies.py  test_auth_integration.py  test_auth_jwt.py  test_auth_middleware.py  test_config.py  test_crud_product.py  test_crud_user.py  test_framework.py  test_health.py  test_language_detector.py  test_models.py  test_product_models.py  test_property_examples.py  test_property_language_interface.py  test_property_multilingual_search.py  test_property_translation_consistency.py  test_property_user_models.py  test_translation_integration.py  test_translation_service.py
tests/utils/: assertions.py  database.py  factories.py  generators.py  simple_factories.py
